parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> partida
Rule 1     partida -> PIVOT
Rule 2     partida -> carta_c SPACE partida SPACE carta_c
Rule 3     partida -> carta_p SPACE partida SPACE carta_p
Rule 4     partida -> carta_v SPACE partida SPACE carta_v
Rule 5     partida -> carta_r SPACE partida SPACE carta_r
Rule 6     partida -> carta_a SPACE partida SPACE carta_a
Rule 7     carta_c -> LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
Rule 8     carta_p -> LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
Rule 9     carta_v -> LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
Rule 10    carta_r -> LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
Rule 11    carta_a -> LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

Terminals, with rules where they appear

COMMA                : 7 7 7 7 8 8 8 8 9 9 9 9 10 10 10 10 11 11 11 11
LBRACKET             : 7 8 9 10 11
LPAREN               : 7 8 9 10 11
NUMBER               : 7 7 7 7 7 8 8 8 8 8 9 9 9 9 9 10 10 10 10 10 11 11 11 11 11
PIVOT                : 1
RBRACKET             : 7 8 9 10 11
RPAREN               : 7 8 9 10 11
SPACE                : 2 2 3 3 4 4 5 5 6 6 7 7 7 7 8 8 8 8 9 9 9 9 10 10 10 10 11 11 11 11
error                : 

Nonterminals, with rules where they appear

carta_a              : 6 6
carta_c              : 2 2
carta_p              : 3 3
carta_r              : 5 5
carta_v              : 4 4
partida              : 2 3 4 5 6 0

Parsing method: LALR

state 0

    (0) S' -> . partida
    (1) partida -> . PIVOT
    (2) partida -> . carta_c SPACE partida SPACE carta_c
    (3) partida -> . carta_p SPACE partida SPACE carta_p
    (4) partida -> . carta_v SPACE partida SPACE carta_v
    (5) partida -> . carta_r SPACE partida SPACE carta_r
    (6) partida -> . carta_a SPACE partida SPACE carta_a
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    PIVOT           shift and go to state 2
    LBRACKET        shift and go to state 8

    partida                        shift and go to state 1
    carta_c                        shift and go to state 3
    carta_p                        shift and go to state 4
    carta_v                        shift and go to state 5
    carta_r                        shift and go to state 6
    carta_a                        shift and go to state 7

state 1

    (0) S' -> partida .



state 2

    (1) partida -> PIVOT .

    $end            reduce using rule 1 (partida -> PIVOT .)
    SPACE           reduce using rule 1 (partida -> PIVOT .)


state 3

    (2) partida -> carta_c . SPACE partida SPACE carta_c

    SPACE           shift and go to state 9


state 4

    (3) partida -> carta_p . SPACE partida SPACE carta_p

    SPACE           shift and go to state 10


state 5

    (4) partida -> carta_v . SPACE partida SPACE carta_v

    SPACE           shift and go to state 11


state 6

    (5) partida -> carta_r . SPACE partida SPACE carta_r

    SPACE           shift and go to state 12


state 7

    (6) partida -> carta_a . SPACE partida SPACE carta_a

    SPACE           shift and go to state 13


state 8

    (7) carta_c -> LBRACKET . LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> LBRACKET . NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> LBRACKET . NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> LBRACKET . NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> LBRACKET . NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    LPAREN          shift and go to state 14
    NUMBER          shift and go to state 15


state 9

    (2) partida -> carta_c SPACE . partida SPACE carta_c
    (1) partida -> . PIVOT
    (2) partida -> . carta_c SPACE partida SPACE carta_c
    (3) partida -> . carta_p SPACE partida SPACE carta_p
    (4) partida -> . carta_v SPACE partida SPACE carta_v
    (5) partida -> . carta_r SPACE partida SPACE carta_r
    (6) partida -> . carta_a SPACE partida SPACE carta_a
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    PIVOT           shift and go to state 2
    LBRACKET        shift and go to state 8

    carta_c                        shift and go to state 3
    partida                        shift and go to state 16
    carta_p                        shift and go to state 4
    carta_v                        shift and go to state 5
    carta_r                        shift and go to state 6
    carta_a                        shift and go to state 7

state 10

    (3) partida -> carta_p SPACE . partida SPACE carta_p
    (1) partida -> . PIVOT
    (2) partida -> . carta_c SPACE partida SPACE carta_c
    (3) partida -> . carta_p SPACE partida SPACE carta_p
    (4) partida -> . carta_v SPACE partida SPACE carta_v
    (5) partida -> . carta_r SPACE partida SPACE carta_r
    (6) partida -> . carta_a SPACE partida SPACE carta_a
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    PIVOT           shift and go to state 2
    LBRACKET        shift and go to state 8

    carta_p                        shift and go to state 4
    partida                        shift and go to state 17
    carta_c                        shift and go to state 3
    carta_v                        shift and go to state 5
    carta_r                        shift and go to state 6
    carta_a                        shift and go to state 7

state 11

    (4) partida -> carta_v SPACE . partida SPACE carta_v
    (1) partida -> . PIVOT
    (2) partida -> . carta_c SPACE partida SPACE carta_c
    (3) partida -> . carta_p SPACE partida SPACE carta_p
    (4) partida -> . carta_v SPACE partida SPACE carta_v
    (5) partida -> . carta_r SPACE partida SPACE carta_r
    (6) partida -> . carta_a SPACE partida SPACE carta_a
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    PIVOT           shift and go to state 2
    LBRACKET        shift and go to state 8

    carta_v                        shift and go to state 5
    partida                        shift and go to state 18
    carta_c                        shift and go to state 3
    carta_p                        shift and go to state 4
    carta_r                        shift and go to state 6
    carta_a                        shift and go to state 7

state 12

    (5) partida -> carta_r SPACE . partida SPACE carta_r
    (1) partida -> . PIVOT
    (2) partida -> . carta_c SPACE partida SPACE carta_c
    (3) partida -> . carta_p SPACE partida SPACE carta_p
    (4) partida -> . carta_v SPACE partida SPACE carta_v
    (5) partida -> . carta_r SPACE partida SPACE carta_r
    (6) partida -> . carta_a SPACE partida SPACE carta_a
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    PIVOT           shift and go to state 2
    LBRACKET        shift and go to state 8

    carta_r                        shift and go to state 6
    partida                        shift and go to state 19
    carta_c                        shift and go to state 3
    carta_p                        shift and go to state 4
    carta_v                        shift and go to state 5
    carta_a                        shift and go to state 7

state 13

    (6) partida -> carta_a SPACE . partida SPACE carta_a
    (1) partida -> . PIVOT
    (2) partida -> . carta_c SPACE partida SPACE carta_c
    (3) partida -> . carta_p SPACE partida SPACE carta_p
    (4) partida -> . carta_v SPACE partida SPACE carta_v
    (5) partida -> . carta_r SPACE partida SPACE carta_r
    (6) partida -> . carta_a SPACE partida SPACE carta_a
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    PIVOT           shift and go to state 2
    LBRACKET        shift and go to state 8

    carta_a                        shift and go to state 7
    partida                        shift and go to state 20
    carta_c                        shift and go to state 3
    carta_p                        shift and go to state 4
    carta_v                        shift and go to state 5
    carta_r                        shift and go to state 6

state 14

    (7) carta_c -> LBRACKET LPAREN . NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    NUMBER          shift and go to state 21


state 15

    (8) carta_p -> LBRACKET NUMBER . COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> LBRACKET NUMBER . COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> LBRACKET NUMBER . COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> LBRACKET NUMBER . COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    COMMA           shift and go to state 22


state 16

    (2) partida -> carta_c SPACE partida . SPACE carta_c

    SPACE           shift and go to state 23


state 17

    (3) partida -> carta_p SPACE partida . SPACE carta_p

    SPACE           shift and go to state 24


state 18

    (4) partida -> carta_v SPACE partida . SPACE carta_v

    SPACE           shift and go to state 25


state 19

    (5) partida -> carta_r SPACE partida . SPACE carta_r

    SPACE           shift and go to state 26


state 20

    (6) partida -> carta_a SPACE partida . SPACE carta_a

    SPACE           shift and go to state 27


state 21

    (7) carta_c -> LBRACKET LPAREN NUMBER . RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    RPAREN          shift and go to state 28


state 22

    (8) carta_p -> LBRACKET NUMBER COMMA . SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> LBRACKET NUMBER COMMA . SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> LBRACKET NUMBER COMMA . SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> LBRACKET NUMBER COMMA . SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    SPACE           shift and go to state 29


state 23

    (2) partida -> carta_c SPACE partida SPACE . carta_c
    (7) carta_c -> . LBRACKET LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    LBRACKET        shift and go to state 31

    carta_c                        shift and go to state 30

state 24

    (3) partida -> carta_p SPACE partida SPACE . carta_p
    (8) carta_p -> . LBRACKET NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    LBRACKET        shift and go to state 33

    carta_p                        shift and go to state 32

state 25

    (4) partida -> carta_v SPACE partida SPACE . carta_v
    (9) carta_v -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    LBRACKET        shift and go to state 35

    carta_v                        shift and go to state 34

state 26

    (5) partida -> carta_r SPACE partida SPACE . carta_r
    (10) carta_r -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET

    LBRACKET        shift and go to state 37

    carta_r                        shift and go to state 36

state 27

    (6) partida -> carta_a SPACE partida SPACE . carta_a
    (11) carta_a -> . LBRACKET NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    LBRACKET        shift and go to state 39

    carta_a                        shift and go to state 38

state 28

    (7) carta_c -> LBRACKET LPAREN NUMBER RPAREN . COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    COMMA           shift and go to state 40


state 29

    (8) carta_p -> LBRACKET NUMBER COMMA SPACE . LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (9) carta_v -> LBRACKET NUMBER COMMA SPACE . NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> LBRACKET NUMBER COMMA SPACE . NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> LBRACKET NUMBER COMMA SPACE . NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    LPAREN          shift and go to state 42
    NUMBER          shift and go to state 41


state 30

    (2) partida -> carta_c SPACE partida SPACE carta_c .

    $end            reduce using rule 2 (partida -> carta_c SPACE partida SPACE carta_c .)
    SPACE           reduce using rule 2 (partida -> carta_c SPACE partida SPACE carta_c .)


state 31

    (7) carta_c -> LBRACKET . LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    LPAREN          shift and go to state 14


state 32

    (3) partida -> carta_p SPACE partida SPACE carta_p .

    $end            reduce using rule 3 (partida -> carta_p SPACE partida SPACE carta_p .)
    SPACE           reduce using rule 3 (partida -> carta_p SPACE partida SPACE carta_p .)


state 33

    (8) carta_p -> LBRACKET . NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    NUMBER          shift and go to state 43


state 34

    (4) partida -> carta_v SPACE partida SPACE carta_v .

    $end            reduce using rule 4 (partida -> carta_v SPACE partida SPACE carta_v .)
    SPACE           reduce using rule 4 (partida -> carta_v SPACE partida SPACE carta_v .)


state 35

    (9) carta_v -> LBRACKET . NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    NUMBER          shift and go to state 44


state 36

    (5) partida -> carta_r SPACE partida SPACE carta_r .

    $end            reduce using rule 5 (partida -> carta_r SPACE partida SPACE carta_r .)
    SPACE           reduce using rule 5 (partida -> carta_r SPACE partida SPACE carta_r .)


state 37

    (10) carta_r -> LBRACKET . NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET

    NUMBER          shift and go to state 45


state 38

    (6) partida -> carta_a SPACE partida SPACE carta_a .

    $end            reduce using rule 6 (partida -> carta_a SPACE partida SPACE carta_a .)
    SPACE           reduce using rule 6 (partida -> carta_a SPACE partida SPACE carta_a .)


state 39

    (11) carta_a -> LBRACKET . NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    NUMBER          shift and go to state 46


state 40

    (7) carta_c -> LBRACKET LPAREN NUMBER RPAREN COMMA . SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    SPACE           shift and go to state 47


state 41

    (9) carta_v -> LBRACKET NUMBER COMMA SPACE NUMBER . COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET
    (10) carta_r -> LBRACKET NUMBER COMMA SPACE NUMBER . COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET
    (11) carta_a -> LBRACKET NUMBER COMMA SPACE NUMBER . COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    COMMA           shift and go to state 48


state 42

    (8) carta_p -> LBRACKET NUMBER COMMA SPACE LPAREN . NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    NUMBER          shift and go to state 49


state 43

    (8) carta_p -> LBRACKET NUMBER . COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    COMMA           shift and go to state 50


state 44

    (9) carta_v -> LBRACKET NUMBER . COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    COMMA           shift and go to state 51


state 45

    (10) carta_r -> LBRACKET NUMBER . COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN COMMA SPACE NUMBER RBRACKET

    COMMA           shift and go to state 52


state 46

    (11) carta_a -> LBRACKET NUMBER . COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE LPAREN NUMBER RPAREN RBRACKET

    COMMA           shift and go to state 53


state 47

    (7) carta_c -> LBRACKET LPAREN NUMBER RPAREN COMMA SPACE . NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER COMMA SPACE NUMBER RBRACKET

    NUMBER          shift and go to state 54


state 48
